--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,10 +14,11 @@
 	
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css">
 		{% block stylesheets %}
 			<link href="{{ asset('/css/style.css') }}" rel="stylesheet"/>
 		
-			{% if app.user == false and app.request.get('_route') != 'questionnaire' %}
+			{# {% if app.user == false and app.request.get('_route') != 'questionnaire' %}
 				<style>
 					.color_theme {
 						background: #000000 !important;
@@ -27,8 +28,9 @@
 						color: white;
 					}
 				</style>
-			{% endif %}
-			{% if app.user and  app.user.personalization != null or app.request.get('_route') == 'questionnaire'  %}
+			{% endif %} #}
+			{# {% if app.user and app.user.personalization != null or app.request.get('_route') == 'questionnaire'  %} #}
+			{% if app.user and app.user.personalization != null %}
 				<style>
 					.color_theme {
 						background: {{ app.user ? app.user.personalization.color : personalization.color}} !important;
@@ -54,14 +56,14 @@
 
 			{% include 'partials/footer.html.twig' %}
 
+			
+			<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/js/bootstrap-select.min.js"></script>
+			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 			{% block javascripts %}
 				<script src="{{ asset('/js/main.js') }}"></script>
 			{% endblock %}
-
-			<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
 		</div>
 	</body>
 </html>
