--- a/templates/partials/modal.html.twig
+++ b/templates/partials/modal.html.twig
@@ -1,24 +1,15 @@
 
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-  Launch demo modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
+<div id="modal" class="modal modal_active" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
+        <h5 class="modal-title"><a href='{{path('cookies_policy')}}'>Politique des cookies</a></h5>
       </div>
       <div class="modal-body">
-        ...
+        <p>En poursuivant votre navigation sur ce site, vous acceptez l’utilisation de cookies ou autres traceurs pour nous permettre de faciliter et d’améliorer votre expérience par la production de données statistiques. Vous acceptez également le stockage de vos données, dont vous pouvez demander à tout moment leur suppression par simple mail.</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button id="acceptTerms" type="button" class="btn btn-primary">Accepter les termes</button>
       </div>
     </div>
   </div>
