--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -5,9 +5,14 @@
         src="{{ asset('/img/custom/logos/' ~ app.user.personalization.imageName) }}"/></a>
     {% endif %}
     
-    {% if app.user == false  %}
+    {% if app.user == false and app.request.get('_route') == 'questionnaire'  %}
        <a class="navbar-brand" href=" {{ path('home') }} "s ><img style="max-height: 46px !important;"
-        src="{{ app.request.get('_route') == 'questionnaire' ? asset('/img/custom/logos/' ~ personalization.imageName) : asset('/img/custom/logos/default/logo-default.png') }}"/></a>
+        src="{{ personalization == null ? asset('/img/custom/logos/default/logo-default.png')  : asset('/img/custom/logos/' ~ personalization.imageName) }}"/></a>
+    {% endif %}
+
+      {% if app.user == false and app.request.get('_route') != 'questionnaire' %}
+       <a class="navbar-brand" href=" {{ path('home') }} "s ><img style="max-height: 46px !important;"
+        src="{{ asset('/img/custom/logos/default/logo-default.png') }}"/></a>
     {% endif %}
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
