--- a/templates/pages/cookies_policy.html.twig
+++ b/templates/pages/cookies_policy.html.twig
@@ -2,9 +2,120 @@
 
 
 {% block body %}
-    <div class="container pt-5">
+	<div class="container pt-5">
 
-        <h3>Politique des cookies</h3>
-    
-    </div>
+		<h2>Politique des cookies</h2>
+
+		<p>Lors de la consultation de notre site, des cookies sont déposés sur votre ordinateur, votre mobile ou votre tablette. Notre site est conçu pour être attentif aux besoins et attentes de nos lecteurs. C’est entre autres pour cela que nous faisons usage de cookies afin par exemple de vous identifier.</p>
+
+		<p>Cette page vous permet de mieux comprendre comment fonctionnent les cookies et comment les paramétrer.</p>
+
+
+		<h3>Définition d’un cookie</h3>
+		<p>Un cookie est un fichier texte déposé sur votre ordinateur lors de la visite d’un site ou de la consultation d’une publicité. Il a pour but de collecter des informations relatives à votre navigation et de vous adresser des services adaptés à votre terminal (ordinateur, mobile ou tablette).</p>
+		<p>Les cookies sont gérés par votre navigateur internet.</p>
+		<h3>Les différents émetteurs</h3>
+
+		<p>Les cookies du site
+			<a href="https://www.agence-cwa.com/">www.agence-cwa.com</a>
+		</p>
+		<p>Il s’agit des cookies déposés par www.agence-cwa.com sur votre terminal pour répondre à des besoins de navigation (identification client…), d’optimisation et de personnalisation des services sur notre site.</p>
+		<h3>Paramétrer votre navigateur internet</h3>
+		<p>
+			Vous pouvez à tout moment choisir de désactiver ces cookies. Votre navigateur peut également être paramétré pour vous signaler les cookies qui sont déposés dans votre ordinateur et vous demander de les accepter ou pas. Vous pouvez accepter ou refuser les cookies au cas par cas ou bien les refuser systématiquement. Nous vous rappelons que le paramétrage est susceptible de modifier vos conditions d’accès à nos contenus et services nécessitant l’utilisation de cookies.
+		</p>
+
+		<p>Si votre navigateur est configuré de manière à refuser l’ensemble des cookies, vous ne pourrez pas profiter d’une partie de nos services. Afin de gérer les cookies au plus près de vos attentes nous vous invitons à paramétrer votre navigateur en tenant compte de la finalité des cookies.</p>
+
+		<p>
+			<strong>Internet Explorer</strong>
+		</p>
+
+		<p>Dans Internet Explorer, cliquez sur le bouton Outils, puis sur Options Internet.
+			Sous l’onglet Général, sous Historique de navigation, cliquez sur Paramètres.
+			Cliquez sur le bouton Afficher les fichiers.</p>
+		<p>
+			<strong>Firefox</strong>
+		</p>
+		<p>Allez dans l’onglet Options du navigateur
+			Dans la fenêtre qui s’affiche, choisissez Vie privée et cliquez sur Affichez les cookies
+		</p>
+
+		<p>
+			<strong>Safari</strong>
+		</p>
+		<p>Dans votre navigateur, choisissez le menu Édition > Préférences.
+			Cliquez sur Sécurité. Cliquez sur Afficher les cookies.
+		</p>
+		<p>
+			<strong>Google Chrome</strong>
+		</p>
+		<p>Cliquez sur l’icône du menu Outils.
+			Sélectionnez Options.
+			Cliquez sur l’onglet Options avancées et accédez à la section Confidentialité.
+			Cliquez sur le bouton Afficher les cookies.</p>
+
+		<h3>Traitement des données</h3>
+
+		<p>L’agence CWA s’engage à ce que la collecte et le traitement de vos données personnelles, effectués à partir du site www.agence-cwa.com, soient conformes à la Loi Informatique et Libertés ainsi qu’au Règlement Général sur la Protection des Données (RGPD).</p>
+
+
+		<ul>
+			<p>Chaque formulaire présent sur le site limite la collecte de vos données personnelles au strict nécessaire et indique :</p>
+			<li>la durée de conservation de celles-ci (18 mois)</li>
+			<li>vous naviguez sur notre site internet et consultez nos services</li>
+			<li>la personne à qui ces données sont destinées</li>
+		</ul>
+
+		<p>
+			<strong>Données collectées</strong>
+		</p>
+
+		<p>L’agence CWA collecte et traite des informations de type : nom, prénom, adresse e-mail, numéro de téléphone, adresse IP, données de connexions et données de navigation.
+			Le caractère obligatoire ou facultatif vous est signalé lors de la collecte par un astérisque. Certaines données sont collectées automatiquement du fait de vos actions sur notre site internet. Nous effectuons également des mesures d’audience et de fréquentation grâce à Google Analytics.</p>
+
+		<ul>
+			<p>Nous collectons les informations que vous nous fournissez notamment quand :</p>
+			<li>vous nous contactez via le formulaire de contact</li>
+			<li>vous naviguez sur notre site internet et consultez nos services</li>
+		</ul>
+
+		<p>
+			<strong>La durée de conservation de vos données</strong>
+		</p>
+
+
+		<p>Les données personnelles recueillies sur le site
+			<a href="https://www.agence-cwa.com/">www.agence-cwa.com</a>
+			sont transmises et conservées selon des protocoles sécurisées et ne sont pas conservées au-delà de la durée nécessaire au traitement de votre demande.</p>
+
+		<p>
+			<strong>La destination de vos données</strong>
+		</p>
+
+		<p>Les données vous concernant sont transmises à notre service commercial. Elles ne sont pas cédées à des tiers ni utilisées à d’autres fins.</p>
+
+		<p>En vue d’adapter le site aux demandes de ses visiteurs, nous mesurons le nombre de visites, le nombre de pages vues ainsi que l’activité des visiteurs sur le site et leur fréquence de retour.
+			Nous collectons également votre adresse IP, afin de déterminer la ville depuis laquelle vous vous connectez. Celle-ci est immédiatement anonymisée après utilisation. Nous ne pouvons donc en aucun cas remonter par ce biais à une personne physique.</p>
+
+		<p>
+			<strong>Accès, rectification ou suppression de vos données</strong>
+		</p>
+
+
+		<p>Vous pouvez demander l’accès à vos informations, à la rectification ou à la suppression de celle-ci.</p>
+
+		<ul>
+			<p>Pour toutes informations supplémentaires ou demande de modification/suppression de vos données privées, vous pouvez contacter l’agence CWA :</p>
+			<li>par e-mail : contact[a]agence-cwa.com</li>
+			<li>par téléphone : 05 35 54 07 59</li>
+			<li>en vous rendant à l’agence : 54, Avenue de la Révolution – 87000 Limoges</li>
+		</ul>
+
+
+		<p>L’agence CWA dispose d’un délai de réponse de 2 mois suivant la date d’envoi de votre demande. Pour en savoir plus sur vos droits, nous vous invitons à consulter le site de la CNIL.</p>
+
+
+	</div>
 {% endblock %}
+
