modify cookies_policy_page add boostrap class"

--- a/templates/pages/cookies_policy.html.twig
+++ b/templates/pages/cookies_policy.html.twig
@@ -4,23 +4,23 @@
 {% block body %}
 	<div class="container pt-5">
 
-		<h2>Politique des cookies</h2>
+		<h2 class="mb-4 fs_4">Politique des cookies</h2>
 
 		<p>Lors de la consultation de notre site, des cookies sont déposés sur votre ordinateur, votre mobile ou votre tablette. Notre site est conçu pour être attentif aux besoins et attentes de nos lecteurs. C’est entre autres pour cela que nous faisons usage de cookies afin par exemple de vous identifier.</p>
 
 		<p>Cette page vous permet de mieux comprendre comment fonctionnent les cookies et comment les paramétrer.</p>
 
 
-		<h3>Définition d’un cookie</h3>
+		<h3 class="mb-3 mt-5">Définition d’un cookie</h3>
 		<p>Un cookie est un fichier texte déposé sur votre ordinateur lors de la visite d’un site ou de la consultation d’une publicité. Il a pour but de collecter des informations relatives à votre navigation et de vous adresser des services adaptés à votre terminal (ordinateur, mobile ou tablette).</p>
 		<p>Les cookies sont gérés par votre navigateur internet.</p>
-		<h3>Les différents émetteurs</h3>
+		<h3 class="mb-3 mt-5">Les différents émetteurs</h3>
 
 		<p>Les cookies du site
 			<a href="https://www.agence-cwa.com/">www.agence-cwa.com</a>
 		</p>
 		<p>Il s’agit des cookies déposés par www.agence-cwa.com sur votre terminal pour répondre à des besoins de navigation (identification client…), d’optimisation et de personnalisation des services sur notre site.</p>
-		<h3>Paramétrer votre navigateur internet</h3>
+		<h3 class="mb-3 mt-5">Paramétrer votre navigateur internet</h3>
 		<p>
 			Vous pouvez à tout moment choisir de désactiver ces cookies. Votre navigateur peut également être paramétré pour vous signaler les cookies qui sont déposés dans votre ordinateur et vous demander de les accepter ou pas. Vous pouvez accepter ou refuser les cookies au cas par cas ou bien les refuser systématiquement. Nous vous rappelons que le paramétrage est susceptible de modifier vos conditions d’accès à nos contenus et services nécessitant l’utilisation de cookies.
 		</p>
@@ -55,7 +55,7 @@
 			Cliquez sur l’onglet Options avancées et accédez à la section Confidentialité.
 			Cliquez sur le bouton Afficher les cookies.</p>
 
-		<h3>Traitement des données</h3>
+		<h3 class="mb-3 mt-5">Traitement des données</h3>
 
 		<p>L’agence CWA s’engage à ce que la collecte et le traitement de vos données personnelles, effectués à partir du site www.agence-cwa.com, soient conformes à la Loi Informatique et Libertés ainsi qu’au Règlement Général sur la Protection des Données (RGPD).</p>
 
@@ -118,4 +118,3 @@
 
 	</div>
 {% endblock %}
-
