--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,20 +2,24 @@
     font-family:'gunplay';
     src:url("../fonts/gunplay.ttf")
 }
+.cwa_link{
+    font-family: gunplay;
+    font-size: 1.2em;
+}
+.fs_4{
+    font-size: 4rem;
+}
+.fw_500{
+    font-weight: 500;
+}
 
 a:hover{
     text-decoration: none;
 }
 .min_heigth{
-    height: calc(100vh - 72px);
+    min-height: calc(100vh - 72px);
 }
-.cwa_link{
-    font-family: gunplay;
-    font-size: 1.2em;
-}
-.fw_500{
-    font-weight: 500;
-}
+
 .container h3{
     margin-bottom: 1.5em;
 }
@@ -85,7 +89,7 @@ form[name="registration_form"] .btn{
     line-height: 52.5px;
     vertical-align: middle;
     box-shadow: 10px 10px 10px rgba(13,88,99, 0.1);
-    /* overflow: hidden; */
+    overflow: hidden; 
 }
 /* .btn_add_survey:hover{
     line-height: 49px;
@@ -178,7 +182,6 @@ form[name='field_survey'] button{
 /** HOME_PAGE **/
 .home{
      min-height: calc(100vh - 70px);
-     width: 100vw;
      background-repeat: no-repeat;
      background-position: center;
      background-size: cover;
