--- a/templates/pages/legales_mentions.html.twig
+++ b/templates/pages/legales_mentions.html.twig
@@ -3,7 +3,7 @@
 
 {% block body %}
 	<div class="container pt-5">
-		<h3>Conformément aux dispositions des articles 6-III et 19 de la loi pour la Confiance dans l’Économie Numérique.</h3>
+		<h2 class="mb-4 fs_225">Conformément aux dispositions des articles 6-III et 19 de la loi pour la Confiance dans l’Économie Numérique.</h2>
 
 		<p>
 			Éditeur du site et responsable de la publication, Créateur et hébergeur :
@@ -15,21 +15,21 @@
 			Mail : contact@agence-cwa.com
 		</p>
 
-		<h3>ARTICLE 1 : OBJET</h3>
+		<h3 class="mb-3 mt-5">ARTICLE 1 : OBJET</h3>
 
 		<p>La présente notice a pour objet de définir les modalités selon lesquelles CWA met à la disposition des internautes son Site Internet www.agence-cwa.com et les conditions selon lesquelles les internautes accèdent et utilisent ce Site Internet. Toute connexion au Site www.agence-cwa.com est subordonnée au respect de la présente notice légale que CWA se réserve de modifier ou de mettre à jour à tout moment. L’accès et l’utilisation du Site www.agence-cwa.com entraînent votre adhésion à la présente notice légale. Si vous n’étiez pas en accord avec les clauses énoncées ci-après, il vous est conseillé ne pas utiliser ce Site</p>
 		
-        <h3>ARTICLE 2 : ACCÈS AU SITE</h3>
+        <h3 class="mb-3 mt-5">ARTICLE 2 : ACCÈS AU SITE</h3>
 		
         <p>CWA s’efforce de maintenir accessible le Site, sans pour autant être tenue à aucune obligation d’y parvenir. Il est précisé qu’à des fins de maintenance, de mise à jour, et pour toute autre raison notamment d’ordre technique, l’accès au Site pourra être interrompu. CWA n’est en aucun cas responsable de ces interruptions et des conséquences qui peuvent en découler pour l’internaute. Par ailleurs, l’éditeur du Site ne saurait garantir l’exactitude des informations qui y sont diffusées. En conséquence, l’utilisateur reconnaît utiliser ces informations sous sa responsabilité exclusive.</p>
 		
-        <h3>ARTICLE 3 : COOKIES</h3>
+        <h3 class="mb-3 mt-5">ARTICLE 3 : COOKIES</h3>
 		
         <p>L’utilisateur est informé que lors de ses visites sur le site, un cookie peut s’installer automatiquement sur son logiciel de navigation. Le cookie est un bloc de données qui ne permet pas d’identifier les utilisateurs mais sert à enregistrer des informations relatives à la navigation de celui-ci sur le site. Le paramétrage du logiciel de navigation permet d’informer de la présence de cookie et éventuellement, de la refuser de la manière décrite à l’adresse suivante : www.cnil.fr.</p>
 		
         <p>L’utilisateur dispose de l’ensemble des droits susvisés s’agissant des données à caractère personnel communiquées par le biais des cookies dans les conditions indiquées ci-dessus. Les utilisateurs de ce site Internet sont tenus de respecter les dispositions de la loi n°78-17 du 6 janvier 1978 modifiée, relative à l’informatique, aux fichiers et aux libertés, dont la violation est passible de sanctions pénales. Ils doivent notamment s’abstenir, s’agissant des informations à caractère personnel auxquelles ils accèdent ou pourraient accéder, de toute collecte, de toute utilisation détournée d’une manière générale, de tout acte susceptible de porter atteinte à la vie privée ou à la réputation des personnes.</p>
 		
-        <h3>ARTICLE 4 : PROPRIETE INTELLECTUELLE</h3>
+        <h3 class="mb-3 mt-5">ARTICLE 4 : PROPRIETE INTELLECTUELLE</h3>
 		
         <p>L’intégralité de notre site Web, y compris les textes, images, animations graphiques, fichiers audio et vidéo, est, sauf disposition contraire explicite, notre propriété et ne peut pas être reproduite, modifiée, transmise, réutilisée, appropriée, utilisée ou employée de quelque autre manière à des fins publiques ou commerciales sans notre accord écrit préalable. Toute violation de nos droits de copyright ou autres droits de protection peut entraîner des poursuites civiles ou pénales à votre encontre.</p>
 	</div>
