--- a/templates/pages/cookies_policy.html.twig
+++ b/templates/pages/cookies_policy.html.twig
@@ -17,9 +17,9 @@
 		<h3 class="mb-3 mt-5">Les différents émetteurs</h3>
 
 		<p>Les cookies du site
-			<a href="https://www.agence-cwa.com/">www.agence-cwa.com</a>
+			<a href="https://www.cell-form.com/">www.cell-form.com</a>
 		</p>
-		<p>Il s’agit des cookies déposés par www.agence-cwa.com sur votre terminal pour répondre à des besoins de navigation (identification client…), d’optimisation et de personnalisation des services sur notre site.</p>
+		<p>Il s’agit des cookies déposés par www.cell-form.com sur votre terminal pour répondre à des besoins de navigation (identification client…), d’optimisation et de personnalisation des services sur notre site.</p>
 		<h3 class="mb-3 mt-5">Paramétrer votre navigateur internet</h3>
 		<p>
 			Vous pouvez à tout moment choisir de désactiver ces cookies. Votre navigateur peut également être paramétré pour vous signaler les cookies qui sont déposés dans votre ordinateur et vous demander de les accepter ou pas. Vous pouvez accepter ou refuser les cookies au cas par cas ou bien les refuser systématiquement. Nous vous rappelons que le paramétrage est susceptible de modifier vos conditions d’accès à nos contenus et services nécessitant l’utilisation de cookies.
@@ -57,7 +57,7 @@
 
 		<h3 class="mb-3 mt-5">Traitement des données</h3>
 
-		<p>L’agence CWA s’engage à ce que la collecte et le traitement de vos données personnelles, effectués à partir du site www.agence-cwa.com, soient conformes à la Loi Informatique et Libertés ainsi qu’au Règlement Général sur la Protection des Données (RGPD).</p>
+		<p>Cell$$ s’engage à ce que la collecte et le traitement de vos données personnelles, effectués à partir du site www.cell-form.com, soient conformes à la Loi Informatique et Libertés ainsi qu’au Règlement Général sur la Protection des Données (RGPD).</p>
 
 
 		<ul>
@@ -71,7 +71,7 @@
 			<strong>Données collectées</strong>
 		</p>
 
-		<p>L’agence CWA collecte et traite des informations de type : nom, prénom, adresse e-mail, numéro de téléphone, adresse IP, données de connexions et données de navigation.
+		<p>CELL Form collecte et traite des informations de type : nom, prénom, adresse e-mail, numéro de téléphone, adresse IP, données de connexions et données de navigation.
 			Le caractère obligatoire ou facultatif vous est signalé lors de la collecte par un astérisque. Certaines données sont collectées automatiquement du fait de vos actions sur notre site internet. Nous effectuons également des mesures d’audience et de fréquentation grâce à Google Analytics.</p>
 
 		<ul>
@@ -86,7 +86,7 @@
 
 
 		<p>Les données personnelles recueillies sur le site
-			<a href="https://www.agence-cwa.com/">www.agence-cwa.com</a>
+			<a href="https://www.cell-form.com/">www.cell-form.com</a>
 			sont transmises et conservées selon des protocoles sécurisées et ne sont pas conservées au-delà de la durée nécessaire au traitement de votre demande.</p>
 
 		<p>
@@ -106,14 +106,14 @@
 		<p>Vous pouvez demander l’accès à vos informations, à la rectification ou à la suppression de celle-ci.</p>
 
 		<ul>
-			<p>Pour toutes informations supplémentaires ou demande de modification/suppression de vos données privées, vous pouvez contacter l’agence CWA :</p>
-			<li>par e-mail : contact[a]agence-cwa.com</li>
+			<p>Pour toutes informations supplémentaires ou demande de modification/suppression de vos données privées, vous pouvez contacter CELL Form :</p>
+			<li>par e-mail : contact[a]cell-form.com</li>
 			<li>par téléphone : 05 35 54 07 59</li>
-			<li>en vous rendant à l’agence : 54, Avenue de la Révolution – 87000 Limoges</li>
+			<li>en vous rendant dans les locaux : 5, Avenue de la Révolution – 87000 Limoges</li>
 		</ul>
 
 
-		<p>L’agence CWA dispose d’un délai de réponse de 2 mois suivant la date d’envoi de votre demande. Pour en savoir plus sur vos droits, nous vous invitons à consulter le site de la CNIL.</p>
+		<p>CELL Form dispose d’un délai de réponse de 2 mois suivant la date d’envoi de votre demande. Pour en savoir plus sur vos droits, nous vous invitons à consulter le site de la CNIL.</p>
 
 
 	</div>
