--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -10,7 +10,7 @@
         <div class="container_text_secondary">
           <p class="text-secondary">Professionnels, étudiants ?</p>
           <p class="text-secondary">Vous avez besoin de faire des sondages ?</p>
-          <p class="text-secondary">La plateforme « CWA formulaire » est faite pour vous !</p>
+          <p class="text-secondary">La plateforme « CELL form » est faite pour vous !</p>
           <p class="text-secondary">Créez autant de formulaire que vous souhaitez.</p>
           <p class="text-secondary">C’est SIMPLE, RAPIDE et GRATUIT.</p>
         </div>
