--- a/templates/pages/legales_mentions.html.twig
+++ b/templates/pages/legales_mentions.html.twig
@@ -7,21 +7,17 @@
 
 		<p>
 			Éditeur du site et responsable de la publication, Créateur et hébergeur :
-			Le directeur de la publication du site www.agence-cwa.com est Mme Sabine PEYRELADE, en sa qualité de Gérante de la SARL CONCEPT WEBAGENCY, nom commercial « AGENCE CWA », au capital de 20 000 € et dont le siège social est situé : 54, avenue de la Révolution – 87000 Limoges.
-			SIRET 511 986 481 00022 – RCS Limoges 511 986 481
-			N° de TVA Intracommunautaire : FR54511986481
-			APE : 7021 Z
-			Téléphone : 05 35 54 18 57
-			Mail : contact@agence-cwa.com
+			Téléphone : 05 55 55 55 55  
+			Mail : contact@cell-form.com
 		</p>
 
 		<h3 class="mb-3 mt-5">ARTICLE 1 : OBJET</h3>
 
-		<p>La présente notice a pour objet de définir les modalités selon lesquelles CWA met à la disposition des internautes son Site Internet www.agence-cwa.com et les conditions selon lesquelles les internautes accèdent et utilisent ce Site Internet. Toute connexion au Site www.agence-cwa.com est subordonnée au respect de la présente notice légale que CWA se réserve de modifier ou de mettre à jour à tout moment. L’accès et l’utilisation du Site www.agence-cwa.com entraînent votre adhésion à la présente notice légale. Si vous n’étiez pas en accord avec les clauses énoncées ci-après, il vous est conseillé ne pas utiliser ce Site</p>
+		<p>La présente notice a pour objet de définir les modalités selon lesquelles CELL Form met à la disposition des internautes son Site Internet www.agence-CELL Form.com et les conditions selon lesquelles les internautes accèdent et utilisent ce Site Internet. Toute connexion au Site www.cell-form.com est subordonnée au respect de la présente notice légale que CELL Form se réserve de modifier ou de mettre à jour à tout moment. L’accès et l’utilisation du Site www.agence-CELL Form.com entraînent votre adhésion à la présente notice légale. Si vous n’étiez pas en accord avec les clauses énoncées ci-après, il vous est conseillé ne pas utiliser ce Site</p>
 		
         <h3 class="mb-3 mt-5">ARTICLE 2 : ACCÈS AU SITE</h3>
 		
-        <p>CWA s’efforce de maintenir accessible le Site, sans pour autant être tenue à aucune obligation d’y parvenir. Il est précisé qu’à des fins de maintenance, de mise à jour, et pour toute autre raison notamment d’ordre technique, l’accès au Site pourra être interrompu. CWA n’est en aucun cas responsable de ces interruptions et des conséquences qui peuvent en découler pour l’internaute. Par ailleurs, l’éditeur du Site ne saurait garantir l’exactitude des informations qui y sont diffusées. En conséquence, l’utilisateur reconnaît utiliser ces informations sous sa responsabilité exclusive.</p>
+        <p>CELL Form s’efforce de maintenir accessible le Site, sans pour autant être tenue à aucune obligation d’y parvenir. Il est précisé qu’à des fins de maintenance, de mise à jour, et pour toute autre raison notamment d’ordre technique, l’accès au Site pourra être interrompu. CELL Form n’est en aucun cas responsable de ces interruptions et des conséquences qui peuvent en découler pour l’internaute. Par ailleurs, l’éditeur du Site ne saurait garantir l’exactitude des informations qui y sont diffusées. En conséquence, l’utilisateur reconnaît utiliser ces informations sous sa responsabilité exclusive.</p>
 		
         <h3 class="mb-3 mt-5">ARTICLE 3 : COOKIES</h3>
 		
