--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,26 @@
     font-family:'gunplay';
     src:url("../fonts/gunplay.ttf")
 }
+
+@keyframes homeBnt {
+    0% {
+        opacity: 0;
+        display:none;
+    }
+    25% {
+        display:block;
+        opacity: 0.5;
+    }
+    100% {
+        display:block;
+        opacity: 1;
+    }
+}
+
+.home_section_btn  {  
+  animation: homeBnt 2.5s ease-out;
+}
+
 .cwa_link{
     font-family: gunplay;
     font-size: 1.2em;
@@ -19,8 +39,10 @@
 a:hover{
     text-decoration: none;
 }
-.min_heigth{
-    min-height: calc(100vh - 72px);
+@media screen and (min-width: 640px) {
+    .min_heigth{
+        min-height: calc(100vh - 72px);
+    }
 }
 
 .container h3{
@@ -29,7 +51,7 @@ a:hover{
 
 /****COLOR_THEME_DEFAULT****/
 .color_theme {
-    background: #000000 !important;
+    background: #222222 !important;
 } 
 .color_text_theme {
     color: white;
@@ -202,16 +224,26 @@ form[name='field_survey'] button{
     min-height: calc(100vh - 70px);
     background: linear-gradient(135deg, rgba(82, 180, 195, 0.03), rgba(82, 180, 195, 0.03), 60%, rgba(13,88,99, 0.2));
 }
+@media screen and (min-width: 640px) {
+    .home_container{
+        left: 150px;
+    }
+    .home_section_btn {
+        width: 500px;
+    }
+    .home_container h1 {
+        padding-top: 4em; 
+    }
+}
 .home_container{
     position: absolute;
     top: 194px;
-    left: 150px;
 }
 
 .btn_connection{
     font-size: 1.4em;
     padding: 1em 1.25em;
-    border: 4px solid #000000 ;
+    border: 4px solid #222222 ;
     color: #000000;
     border-radius:2px ;
 }
@@ -224,9 +256,9 @@ form[name='field_survey'] button{
 .btn_creation{
     font-size: 1.4em;
     padding: 1em 1.25em;
-    border: 4px solid #000000 ;
+    border: 4px solid #222222 ;
     color: white;
-    background-color: #000000;
+    background-color: #222222;
     border-radius:2px ;
 }
 .btn_creation:hover{
@@ -237,7 +269,7 @@ form[name='field_survey'] button{
 
 .home_container h1{
     font-size: 2.7em;
-    padding-top: 4em;
+    padding-top: 2em;
 
 }
 .home_container h2{
@@ -245,7 +277,7 @@ form[name='field_survey'] button{
     padding-bottom: 1em;
 }
 .home_section_btn{
-    width: 500px;
+  /*  width: 500px;*/
 }
 
 
