--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -5,7 +5,7 @@
 
 			<div class="col-md-6 mt-md-0 mt-3">
 
-				<h5 class="text-uppercase mb-2"><span class="cwa_link" >CWA</span> formulaire</h5>
+				<h5 class="text-uppercase mb-2"><span class="cwa_link" >CELL</span> form</h5>
 				<p class="mb-0">Créez autant de formulaire que vous souhaitez</p>
 				<p>C’est SIMPLE, RAPIDE et GRATUIT</p>
 			</div>
