remove all default files

--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -34,8 +34,8 @@
 
 	<div class="footer-copyright text-center py-3">© 2020 Copyright:
 		<a class="color_text_theme" href="https://www.agence-cwa.com/">
-			Agence
-			<span class="cwa_link color_text_theme">CWA</span>
+			<span class="cwa_link color_text_theme">CELL</span>
+			From
 		</a>
 	</div>
 
