--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" href="{{asset('/img/custom/logos/default/cropped-favicon-black-32x32.png')}}" id="light-scheme-icon" sizes="32x32">
-		<link rel="icon" href="{{asset('/img/custom/logos/default/cropped-favicon-white-32x32.png')}}" id="light-scheme-icon" sizes="32x32">
+		<link rel="icon" href="{{asset('/img/custom/logos/default/logo-default.png')}}" id="light-scheme-icon" sizes="32x32">
+		<link rel="icon" href="{{asset('/img/custom/logos/default/logo-default.png')}}" id="light-scheme-icon" sizes="32x32">
 	
 		<title>
-			{% block title %}CWA Formulaire{% endblock %}
+			{% block title %}CELL Form{% endblock %}
 		</title>
 
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
